--- a/example-lambda-rs/Cargo.toml
+++ b/example-lambda-rs/Cargo.toml
@@ -10,3 +10,6 @@ lambda_runtime = "0.13.0"
 serde = "1.0.204"
 serde_json = "1.0.120"
 tokio = { version = "1", features = ["macros"] }
+
+[dev-dependencies]
+tokio-macros = "2.4.0"
